Wed Feb 28 23:27:04 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* client.c: Changed #ifdef VMS && NO_SOCKET_TO_FD to
	#if defined(VMS) && defined(NO_SOCKET_TO_FD)

Wed Feb 28 22:28:43 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* build_src.com: Added DCL command procedure to build
	and link CVS client for VMS.

Wed Feb 28 22:07:20 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* client.c: VMS CVS client specific changes.

	Added USE_DIRECT_TCP to allow CVS_PORT to be used to specify
	a TCP connection port (no Kerberos).  Changed
	start_kerberos_server() to start_tcp_server().

	In copy_a_file(): transform a backup file to have a
        VMS-friendly name.  Changed 

	Added HAVE_CONFIG_H to include "config.h".  

	start_server() will starts the first successful of any
	mutually exclusive methods of starting the CVS server
	which might be enabled.

	Initialized use_socket_style and server_sock for VMS in
	start_server().

Wed Feb 28 21:49:48 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* find_names.c, recurse.c, cvs.h: Changed Find_Dirs() to
	Find_Directories().
	* cvs.h: Added VMS filenames enabled through USE_VMS_FILENAMES
	VMS POSIX will require to use the regular CVS filenames
	while VMS is #define'd.

Wed Feb 28 21:26:22 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* ignore.c: Added the patterns *.olb *.exe _$* *$ to default
	ignore list for VMS.

Wed Feb 28 13:32:28 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* logmsg.c (do_editor): Fix indentation.

Wed Feb 28 12:56:49 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* logmsg.c (do_editor): If no editor is defined, exit and print
	a message.

Wed Feb 28 10:40:25 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vers_ts.c (time_stamp, time_stamp_server): Reindent and revise
	comments.

Tue Feb 27 23:57:55 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* vers_ts.c: gmtime() returns NULL on some systems (VMS)
	revert to local time via ctime() if GMT is not avaiable.
